[package]
name = "rusido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"
bytes = "1.8"
byteorder = "1.5"
service_utils_rs = { version = "0.1.2", features = ["jwt"] }
thiserror = "2.0"
